mod: fixed overflow on code block

--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@ body {
 	border-radius: 0.5rem;
 	margin: 0.5rem 0;
 	padding: 1rem;
+	text-wrap: wrap;
 }
 
 .markdown pre code {
@@ -141,14 +142,7 @@ body {
 	padding: 0.25rem 0.5rem;
 }
 
-/* cool list icon */
-.cool-list li {
-	display: flex;
-	align-items: center;
-	padding-left: 1rem;
-	text-indent: 0.7rem;
-}
-
-.cool-list li::before {
-	content: "🚀";
+.markdown a {
+	color: #1e2a6a;
+	text-decoration: underline;
 }
